--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "bulma": "^0.2.3",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "sass-brunch": "^2.7.0"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
